- Many Improvements and Code Smells